Made Sidenav scrollable, fixed scrollbars on dashboardEdit and made costum scrollbar global

--- a/client/src/scss/base/_globals.scss
+++ b/client/src/scss/base/_globals.scss
@@ -1,5 +1,34 @@
+body {
+  overflow-y: hidden;
+}
+
 * {
   font-family: $font;
+  /* width */
+  &::-webkit-scrollbar {
+    width: 7px;
+  }
+  /* Track */
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 2px grey;
+    border-radius: 10px;
+  }
+  /* Handle */
+  &::-webkit-scrollbar-thumb {
+    background: $color-red;
+    border-radius: 10px;
+  }
+  ul {
+    padding: 0;
+    padding-inline-start: 0px;
+    margin: 0px;
+    margin-block-start: 0;
+    color: $color-grey;
+    li:hover {
+      color: $color-red;
+      cursor: pointer;
+    }
+  }
 }
 
 .flex-center {
