--- a/client/src/scss/base/_list.scss
+++ b/client/src/scss/base/_list.scss
@@ -1,5 +1,12 @@
+.listView {
+  margin-top: 20px;
+  overflow-y: auto;
+  height: 85vh;
+  margin-right: 15px;
+}
+
 .list {
-  margin: 20px 0 0 0;
+  margin: 0;
   padding: 0;
   color: $color-red;
   font-weight: bold;
